# ME759_FinalProject

./: CMakeLists.txt  README.md  f_eval.cuh  generate.sh  generator.cpp  jacobian-old.cu  jacobian.cu  jacobian.sh  jacobian_cpu.cu  jacobian_cpu.sh  jacobian_profile.sh
Results/: project.m  res_cpu.xlsx  res_gpu_new.xlsx  res_gpu_new_1060.xlsx  res_gpu_old.xlsx  res_gpu_old_1060.xlsx
prof/: jacobian.nvprof
